# libsimplepgp

./: .hgignore  .hgtags  ChangeLog  INSTALL  Makefile.am  README  build_ios.sh  configure.ac  get_libs.sh  index.html  packet.c  packet.h  packet_test.c  params.json  simplepgp.pc.in
examples/01_decrypt/: Makefile  ciphertext.pgp  decrypt.c  test1_sec.pgp
examples/02_decrypt_rsa/: Makefile  ciphertext.pgp  decrypt_rsa.c  test2_sec.pgp
simplepgp.xcodeproj/: project.pbxproj  trevor.mode1v3  trevor.pbxuser
src/: Makefile.am  keychain.c  keychain.h  mpi.c  mpi.h  packet.c  packet.h  packet_private.h  packet_test.c  packet_test.h  simplepgp.h  util.c  util.h
